added privacy policy and tos

--- a/resources/locales/en/index.json
+++ b/resources/locales/en/index.json
@@ -6,6 +6,7 @@
   "signup": "Sign up",
   "descheader": "",
   "descp": "",
+  "more": "more",
   "faq": "FAQ",
   "fees": "Fees",
   "about": "About us"
